<resources>
    <string name="app_name">Fire Groceries</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="dont_have_acct">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="searchBar">Search</string>
    <string name="featured">Featured</string>
    <string name="itemOne">Item Name</string>
    <string name="itemTwo">Item Name</string>
    <string name="itemThree">Item Name</string>
    <string name="itemFour">Item Name</string>
    <string name="itemFive">Item Name</string>
    <string name="itemSix">Item Name</string>
    <string name="meats">Meats</string>
    <string name="dairy">Dairy</string>
    <string name="frozen">Frozen</string>
    <string name="drinks">Beverages</string>
    <string name="produce">Produce</string>
    <string name="dry">Dry Foods/Spices</string>
    <string name="categories">Categories</string>
    <string name="payment_method">Payment</string>
    <string name="coke">coke</string>
    <string name="DinoNuggets">Dino Nuggets</string>
    <string name="Arizona">Arizona Iced Tea</string>
    <string name="ketchup">Ketchup</string>
    <string name="placeholder">Loading...</string>
    <string name="checkout">Checkout</string>
    <string name="tax">Tax</string>
    <string name="desc">Description</string>
    <string name="recipes">Recipes</string>
    <string name="nutrition">Nutrition Facts</string>
    <string name="reviews">Reviews</string>
    <string name="addToCart">Add To Cart</string>
    <string name="quantity">Quantity</string>
    <string name="preview">Coming Soon!</string>
    <string name="sub">subtotal</string>
    <string name="grandTotal">Total</string>
    <string name="price">Price</string>
    <string name="submit">submit</string>
    <string name="card_holder_s_name">card_holder_s_name</string>
    <string name="card_number">card_number</string>
    <string name="cvv">cvv</string>
    <string name="mm_yy">mm_yy</string>
    <string name="clearcart">Clear Cart</string>
    <string name="reviewhint">write review here</string>
    <string name="faq">FAQ</string>
    <string name="about">About Us</string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
    <string name="subreview">Submit New Review</string>
    <string name="avgscore">Average Review Score</string>
    <string name="confirm">Confirm Checkout</string>
    <string name="favs">Favorite Items</string>
    <string name="gotofav">Order Item</string>
    <string name="orderhist">Order History</string>
    <string name="ordername">Order Name</string>
    <string name="vieworder">View Order</string>
</resources>