<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fire"
    tools:context=".Login">
    <ImageView
        android:id="@+id/fire"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fire"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#10F0F0F0"
        android:drawableLeft="@drawable/usericon"
        android:drawablePadding="5dp"
        android:hint="@string/username_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#F0F0F0" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#10F0F0F0"
        android:drawableLeft="@drawable/passw"
        android:drawablePadding="5dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#F0F0F0"
        android:imeOptions="actionDone"
        android:singleLine="true"
        />

    <TextView

        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:clickable="true"
        android:gravity="end"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/forgot_password"
        android:imeOptions="actionDone"
        android:textColor="#F0F0F0"
        android:textSize="15dp" />

    <Button
        android:id="@+id/signin"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#9D2932"
        android:text="@string/sign_in_button_text"
        android:textAllCaps="false"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/signin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_acct"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register_here"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>