<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="158dp"
        android:backgroundTint="#FF5722"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvvNumber" />

    <EditText
        android:id="@+id/cardHolderName"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="Card Holder's Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="96dp"
        android:drawableRight="@drawable/credit_card"
        android:ems="10"
        android:hint="Card Number"
        android:inputType="numberPassword"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHolderName" />

    <EditText
        android:id="@+id/cvvNumber"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="254dp"
        android:drawableRight="@drawable/cvv_icon"
        android:ems="10"
        android:hint="CVV"
        android:inputType="numberPassword"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expirationDate" />

    <EditText
        android:id="@+id/expirationDate"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="244dp"
        android:ems="10"
        android:hint="MM/YY"
        android:inputType="date|datetime|phone"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

    <TextView
        android:id="@+id/payment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="608dp"
        android:text="@string/payment_method"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGrandTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/grandTotal"
        app:layout_constraintStart_toStartOf="@+id/cardHolderName"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>